# air_pollution_app

./: .gitignore  README.md  docker-compose.yml
api/: Dockerfile  main.py  pyproject.toml  requirements.txt
api/air_pollution/: db_connection.py  endpoints.py  models.py  schemas.py
data_processing/: Dockerfile  crontab  main.py  pyproject.toml  requirements.txt
data_processing/air_pollution/: db_connection.py  models.py  processing.py  scraping.py
database/: Dockerfile  air_quality_index_levels.json  create_db.py  pyproject.toml  requirements.txt
database/db/: database.py  models.py
docs/: Dockerfile  mkdocs.yml  pyproject.toml  requirements.txt
docs/docs/: api.md  data_processing.md  database.md  frontend.md  index.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/air-pollution/: package-lock.json  package.json
frontend/air-pollution/public/: index.html
frontend/air-pollution/src/: AQI.js  App.js  Chart.js  ChartComponents.js  Cities.js  Home.js  Navbar.js  Parameters.js  Statistics.js  fetch.js  index.css
frontend/src/: App.js
