[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["pulcovamon <pulcovamon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
