[tool.poetry]
name = "database"
version = "0.1.0"
description = ""
authors = ["pulcovamon <pulcovamon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.30"
sqlalchemy-utils = "^0.41.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
